--- a/resumeback/src/main/resources/application.properties
+++ b/resumeback/src/main/resources/application.properties
@@ -12,6 +12,9 @@ spring.third.datasource.jdbc-url=jdbc:mariadb://localhost:3306/wonderful?useUnic
 spring.third.datasource.username=root
 spring.third.datasource.password=1234
 spring.third.first.datasource.validation-query=SELECT 1
+
+spring.jpa.hibernate.ddl-auto==update
+
 # HikariCP settings
 # spring.datasource.hikari.*
 # 60 sec
